homecss.css
/* @media screen and (min-width: 550 px) {}

@media screen and (min-width: 700 px) {}

@media screen and (min-width: 900 px) {} */

body {
    font-family: Roboto;
    color: #424242;
    margin: 0px;
}

.reveal {
    position: relative;
    opacity: 0;
}

.reveal.active {
    opacity: 1;
}

.topcard div {
    height: 100%;
    width: 100%;
    background-color: black;
    position: absolute;
    z-index: -1;
}

.content {
    position: absolute;
    top: 39%;
    background: #ccd5cc;
    margin: -40px 160px;
    z-index: 1;
    left: 20%;
    opacity: 0.86;
}

.headertext {
    width: 85%;
    margin-left: 3.5em;
}

.header_title {
    font-size: 1.55em;
    margin: 5px;
    color: #495159;
    letter-spacing: -0.05em;
    text-transform: uppercase;
}

main span {
    font-weight: 40;
    margin-left: 0.05em;
    color: #495159;
    text-transform: uppercase;
}

.small {
    font-weight: 70;
    float: left;
    margin-right: 0.5em;
}

.inside {
    background-color: white;
    width: 100%;
}

nav {
    width: 100%;
    overflow: auto;
    top: 0;
    left: 0;

}

.verticalline {
    border-left: 2px solid #495159;
    margin: 5px;
}

nav ul {
    list-style-type: none;
    overflow: hidden;
    margin: 5px;
    padding: 5px;
    overflow: hidden;
    font-size: 1.05em;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    margin-right: 1em;
}

nav li {
    display: block;
}

nav li a:hover {
    background-color: #F6B444;
}

.rightbuttons {
    font-size: 10px;
    float: left;
    margin-right: 1px;
    background-color: #ffffff;
    color: #888888;
    width: 20px;
    text-align: center;
    height: 16px;
}

.bgtext {
    display: block;
    z-index: -1;

    background-image: url("assets/gridTileBg.png");
    background-repeat: repeat;
    background-clip: border-box;
    background-origin: border-box;

}

.bgtext p {
    font-size: 300px;
    color: #aabad8;
    letter-spacing: -10px;
}

#one {
    margin-top: 10%;
    margin-left: 10%;
}

#two {
    margin-top: -50%;
    margin-left: 40%;
}

.sideBox {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    margin: 5%;
    position: relative;
}

.sideWindow {
    border: 1px solid #d49d9a;
}

.mockButtons {
    background-color: #e35b5f;
    display: block;
    border: 1px solid #d49d9a;
}

.insideSideBox {
    border: 1px solid #d49d9a;
}

#whiteImg {
    width: 50px;
    height: 550px;
}

.leftSideMockButtons {
    display: inline;
    color: white;
}

.scrollSideBox {
    display: inline;
}

.bottomSideBox {
    display: inline;
    color: #e35b5f;
    border-top: 1px solid #d49d9a;
}

#leftArrow {
    float: left;
    border: 1px solid #d49d9a;
}

#scrollBar {
    letter-spacing: -1px;
    margin: 5px;
    box-sizing: border-box;

}

#rightArrow {
    float: right;
    border: 1px solid #d49d9a;
}

#starImg {
    display: block;
    margin-left: -100%;
    margin-top: 3%;
}

.midColumnText {
    display: inline;
    text-transform: uppercase;
    margin-left: -180%;
    margin-top: 15%;
    font-family: "Special Elite";
    font-size: 36px;
}

.secondCard {
    background-color: white;
    width: 650px;
    top: -500px;
    left: 250px;
    z-index: 5;
    border: 1px solid #e35b5f;
}

.secondText {
    border: 1px solid #e35b5f;
    padding: 15px;
}

.bioCaption {
    display: block;
    margin-top: -1050px;
    margin-left: 750px;
    text-align: right;
    width: 644px; /* this needs to be changed to whatever width the actual image used is*/
}

.thirdCard {
    background-color: #ffecc9;
    display: inline-grid;
    margin-left: 750px;
    width: 644px; /* this needs to be changed to whatever width the actual image used is*/
}

.footerArea {
    background-color: black;
}

.textContainer {
    grid-template-columns: repeat(3, 1fr);
    display: grid;
    width: 100%;
}

